--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask — Home</title>
+  <title>SnapTask | Home</title>
   <meta name="description" content="SnapTask: organize your tasks in a snap. Official site & support.">
   <link rel="icon" href="/favicon.ico">
   <!-- Smart App Banner -->
