--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask — Home</title>
+  <title>SnapTask | Home</title>
   <meta name="description" content="SnapTask: organizza le tue attività in un attimo. Sito ufficiale e supporto.">
   <link rel="icon" href="favicon.ico">
   <style>
@@ -24,7 +24,8 @@
   </style>
   <!-- App Store Smart App Banner -->
   <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
-  <meta property="og:title" content="SnapTask">
+  <meta property="og:title" content="SnapTask | Home">
+  <meta property="og:site_name" content="SnapTask">
   <meta property="og:description" content="Organizza le tue attività in un attimo.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://giovanniamadei.github.io/">
