--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask — Informativa sulla Privacy</title>
+  <title>SnapTask | Informativa sulla Privacy</title>
   <meta name="description" content="Informativa sulla privacy per l'app SnapTask.">
   <link rel="icon" href="favicon.ico">
   <style>
