--- a/supporto.html
+++ b/supporto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask — Supporto</title>
+  <title>SnapTask | Supporto</title>
   <meta name="description" content="Supporto per l'app SnapTask. Contattaci per assistenza e feedback.">
   <link rel="icon" href="favicon.ico">
   <style>
