--- a/en/support.html
+++ b/en/support.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask — Support</title>
+  <title>SnapTask | Support</title>
   <meta name="description" content="Support for the SnapTask app. Contact us for help and feedback.">
   <link rel="icon" href="/favicon.ico">
   <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
