--- a/index.html
+++ b/index.html
@@ -2,67 +2,15 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SnapTask | Home</title>
-  <meta name="description" content="SnapTask: organizza le tue attività in un attimo. Sito ufficiale e supporto.">
-  <link rel="icon" href="favicon.ico">
-  <style>
-    :root { color-scheme: light dark; --bg:#0b0b0c; --fg:#e9e9ea; --muted:#9ea0a6; --card:#151518; --accent:#4f8cff; --link:#4f8cff; }
-    @media (prefers-color-scheme: light) { :root { --bg:#ffffff; --fg:#111111; --muted:#5a5c63; --card:#f6f7f9; --accent:#2155ff; --link:#2155ff; } }
-    html,body { height:100%; }
-    body { margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; background:var(--bg); color:var(--fg); }
-    .container { max-width:900px; margin:0 auto; padding:32px 20px; }
-    header { display:flex; justify-content:space-between; align-items:center; gap:16px; }
-    nav a { color:var(--link); text-decoration:none; margin-left:16px; }
-    nav a:hover { text-decoration:underline; }
-    .hero { margin:56px 0 28px; }
-    .hero h1 { font-size:40px; line-height:1.1; margin:0 0 12px; }
-    .hero p { margin:0; color:var(--muted); font-size:18px; }
-    .card { background:var(--card); border-radius:14px; padding:20px; margin-top:28px; }
-    .btn { display:inline-block; background:var(--accent); color:white; padding:12px 16px; border-radius:10px; text-decoration:none; font-weight:600; }
-    footer { margin-top:56px; color:var(--muted); font-size:14px; }
-  </style>
-  <!-- App Store Smart App Banner -->
-  <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
-  <meta property="og:title" content="SnapTask | Home">
-  <meta property="og:site_name" content="SnapTask">
-  <meta property="og:description" content="Organizza le tue attività in un attimo.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://giovanniamadei.github.io/">
+  <meta http-equiv="refresh" content="0; url=/snaptask/">
+  <title>SnapTask - Redirecting...</title>
+  <script>
+    // Redirect to the new support site
+    window.location.href = '/snaptask/';
+  </script>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div style="display:flex; align-items:center; gap:10px;">
-        <img src="/assets/icon.png" alt="SnapTask" width="32" height="32" style="border-radius:8px; background:#ddd;">
-        <strong>SnapTask</strong>
-      </div>
-      <nav>
-        <a href="/">Home</a>
-        <a href="/supporto">Supporto</a>
-        <a href="/privacy">Privacy</a>
-        <span style="margin-left:16px; color:var(--muted)">IT · <a href="/en/" style="color:var(--link)">EN</a></span>
-      </nav>
-    </header>
-
-    <section class="hero">
-      <h1>Organizza le tue attività in un attimo</h1>
-      <p>SnapTask ti aiuta a catturare idee e gestire to‑do con velocità e semplicità.</p>
-    </section>
-
-    <section class="card">
-      <h2>Scarica SnapTask</h2>
-      <p>Disponibile su App Store. Progettata per iPhone.</p>
-      <p><a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID_HERE" target="_blank" rel="noopener">Apri su App Store</a></p>
-    </section>
-
-    <footer>
-      <p>© <span id="year"></span> SnapTask. Tutti i diritti riservati. • <a href="/supporto">Supporto</a> • <a href="/privacy">Privacy</a></p>
-    </footer>
-  </div>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <p>Se non vieni reindirizzato automaticamente, <a href="/snaptask/">clicca qui</a>.</p>
 </body>
 </html>
 
