--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     .card { background:var(--card); border-radius:14px; padding:20px; margin-top:28px; }
     .btn { display:inline-block; background:var(--accent); color:white; padding:12px 16px; border-radius:10px; text-decoration:none; font-weight:600; }
     footer { margin-top:56px; color:var(--muted); font-size:14px; }
+    .gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:14px; margin-top:14px; }
+    .gallery img { width:100%; height:auto; border-radius:12px; display:block; background:#222; }
   </style>
   <!-- App Store Smart App Banner -->
   <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
@@ -54,6 +56,19 @@
       <h2>Scarica SnapTask</h2>
       <p>Disponibile su App Store. Progettata per iPhone.</p>
       <p><a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID_HERE" target="_blank" rel="noopener">Apri su App Store</a></p>
+    </section>
+
+    <section class="card">
+      <h2>Caratteristiche</h2>
+      <p class="muted">Timer di focus, statistiche, premi, sincronizzazione istantanea tra dispositivi e molto altro.</p>
+      <div class="gallery">
+        <img src="/assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers">
+        <img src="/assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts">
+        <img src="/assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks">
+        <img src="/assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term">
+        <img src="/assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards">
+        <img src="/assets/screenshot6.jpg" alt="Sync across iPhone and iPad">
+      </div>
     </section>
 
     <footer>
