--- a/en/index.html
+++ b/en/index.html
@@ -25,13 +25,14 @@
     footer { margin-top:56px; color:var(--muted); font-size:14px; }
     .gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:14px; margin-top:14px; }
     .gallery img { width:100%; height:auto; border-radius:12px; display:block; background:#222; }
+    .hero-icon { width:84px; height:84px; border-radius:18px; background:#ddd; display:block; }
   </style>
 </head>
 <body>
   <div class="container">
     <header>
       <div style="display:flex; align-items:center; gap:10px;">
-        <img src="/assets/icon.png" alt="SnapTask" width="32" height="32" style="border-radius:8px; background:#ddd;">
+        <img src="../assets/icon.png" alt="SnapTask" width="32" height="32" style="border-radius:8px; background:#ddd;">
         <strong>SnapTask</strong>
       </div>
       <nav>
@@ -43,8 +44,10 @@
     </header>
 
     <section class="hero">
+      <img src="../assets/icon.png" alt="SnapTask icon" class="hero-icon">
       <h1>Organize your tasks in a snap</h1>
       <p>SnapTask helps you capture ideas and manage to‑dos quickly and simply.</p>
+      <p style="margin-top:14px"><a class="btn" href="/en/support">Go to Support</a></p>
     </section>
 
     <section class="card">
@@ -57,12 +60,12 @@
       <h2>Features</h2>
       <p class="muted">Focus timers, analytics, rewards, instant sync across devices, and more.</p>
       <div class="gallery">
-        <img src="/assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers">
-        <img src="/assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts">
-        <img src="/assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks">
-        <img src="/assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term">
-        <img src="/assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards">
-        <img src="/assets/screenshot6.jpg" alt="Sync across iPhone and iPad">
+        <img src="../assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers" loading="lazy">
+        <img src="../assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts" loading="lazy">
+        <img src="../assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks" loading="lazy">
+        <img src="../assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term" loading="lazy">
+        <img src="../assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards" loading="lazy">
+        <img src="../assets/screenshot6.jpg" alt="Sync across iPhone and iPad" loading="lazy">
       </div>
     </section>
 
