--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     footer { margin-top:56px; color:var(--muted); font-size:14px; }
     .gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap:14px; margin-top:14px; }
     .gallery img { width:100%; height:auto; border-radius:12px; display:block; background:#222; }
+    .hero-icon { width:84px; height:84px; border-radius:18px; background:#ddd; display:block; }
   </style>
   <!-- App Store Smart App Banner -->
   <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
@@ -36,7 +37,7 @@
   <div class="container">
     <header>
       <div style="display:flex; align-items:center; gap:10px;">
-        <img src="/assets/icon.png" alt="SnapTask" width="32" height="32" style="border-radius:8px; background:#ddd;">
+        <img src="assets/icon.png" alt="SnapTask" width="32" height="32" style="border-radius:8px; background:#ddd;">
         <strong>SnapTask</strong>
       </div>
       <nav>
@@ -48,8 +49,10 @@
     </header>
 
     <section class="hero">
+      <img src="assets/icon.png" alt="Icona SnapTask" class="hero-icon">
       <h1>Organizza le tue attività in un attimo</h1>
       <p>SnapTask ti aiuta a catturare idee e gestire to‑do con velocità e semplicità.</p>
+      <p style="margin-top:14px"><a class="btn" href="/supporto">Vai al Supporto</a></p>
     </section>
 
     <section class="card">
@@ -62,12 +65,12 @@
       <h2>Caratteristiche</h2>
       <p class="muted">Timer di focus, statistiche, premi, sincronizzazione istantanea tra dispositivi e molto altro.</p>
       <div class="gallery">
-        <img src="/assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers">
-        <img src="/assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts">
-        <img src="/assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks">
-        <img src="/assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term">
-        <img src="/assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards">
-        <img src="/assets/screenshot6.jpg" alt="Sync across iPhone and iPad">
+        <img src="assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers" loading="lazy">
+        <img src="assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts" loading="lazy">
+        <img src="assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks" loading="lazy">
+        <img src="assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term" loading="lazy">
+        <img src="assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards" loading="lazy">
+        <img src="assets/screenshot6.jpg" alt="Sync across iPhone and iPad" loading="lazy">
       </div>
     </section>
 
