--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
       <h2>Caratteristiche</h2>
       <p class="muted">Timer di focus, statistiche, premi, sincronizzazione istantanea tra dispositivi e molto altro.</p>
       <div class="gallery">
-        <img src="assets/screenshot1.jpg" alt="Focus Mode: simple and Pomodoro timers" loading="lazy">
-        <img src="assets/screenshot2.jpg" alt="Statistics: time distribution and performance charts" loading="lazy">
-        <img src="assets/screenshot3.jpg" alt="Task details: photos, voice memos, notes, subtasks" loading="lazy">
-        <img src="assets/screenshot4.jpg" alt="Planning views: day, week, month, year, long-term" loading="lazy">
-        <img src="assets/screenshot5.jpg" alt="Rewards system: earn points and redeem custom rewards" loading="lazy">
-        <img src="assets/screenshot6.jpg" alt="Sync across iPhone and iPad" loading="lazy">
+        <img src="assets/screenshot1.png" alt="Focus Mode: simple and Pomodoro timers" loading="lazy">
+        <img src="assets/screenshot2.png" alt="Statistics: time distribution and performance charts" loading="lazy">
+        <img src="assets/screenshot3.png" alt="Task details: photos, voice memos, notes, subtasks" loading="lazy">
+        <img src="assets/screenshot4.png" alt="Planning views: day, week, month, year, long-term" loading="lazy">
+        <img src="assets/screenshot5.png" alt="Rewards system: earn points and redeem custom rewards" loading="lazy">
+        <img src="assets/screenshot6.png" alt="Sync across iPhone and iPad" loading="lazy">
       </div>
     </section>
 
