--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="SnapTask: organize your tasks in a snap. Official site & support.">
   <link rel="icon" href="/favicon.ico">
   <!-- Smart App Banner -->
-  <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
+  <meta name="apple-itunes-app" content="app-id=6746721766">
   <style>
     :root { color-scheme: light dark; --bg:#0b0b0c; --fg:#e9e9ea; --muted:#9ea0a6; --card:#151518; --accent:#4f8cff; --link:#4f8cff; }
     @media (prefers-color-scheme: light) { :root { --bg:#ffffff; --fg:#111111; --muted:#5a5c63; --card:#f6f7f9; --accent:#2155ff; --link:#2155ff; } }
@@ -53,7 +53,7 @@
     <section class="card">
       <h2>Get SnapTask</h2>
       <p>Available on the App Store. Designed for iPhone.</p>
-      <p><a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID_HERE" target="_blank" rel="noopener">Open on the App Store</a></p>
+      <p><a class="btn" href="https://apps.apple.com/app/snaptask/id6746721766" target="_blank" rel="noopener">Open on the App Store</a></p>
     </section>
 
     <section class="card">
