--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     .hero-icon { width:84px; height:84px; border-radius:18px; background:#ddd; display:block; }
   </style>
   <!-- App Store Smart App Banner -->
-  <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
+  <meta name="apple-itunes-app" content="app-id=6746721766">
   <meta property="og:title" content="SnapTask | Home">
   <meta property="og:site_name" content="SnapTask">
   <meta property="og:description" content="Organizza le tue attività in un attimo.">
@@ -58,7 +58,7 @@
     <section class="card">
       <h2>Scarica SnapTask</h2>
       <p>Disponibile su App Store. Progettata per iPhone.</p>
-      <p><a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID_HERE" target="_blank" rel="noopener">Apri su App Store</a></p>
+      <p><a class="btn" href="https://apps.apple.com/app/snaptask/id6746721766" target="_blank" rel="noopener">Apri su App Store</a></p>
     </section>
 
     <section class="card">
