--- a/en/privacy.html
+++ b/en/privacy.html
@@ -6,7 +6,7 @@
   <title>SnapTask | Privacy Policy</title>
   <meta name="description" content="Privacy policy for the SnapTask app.">
   <link rel="icon" href="/favicon.ico">
-  <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID_HERE">
+  <meta name="apple-itunes-app" content="app-id=6746721766">
   <style>
     :root { color-scheme: light dark; --bg:#0b0b0c; --fg:#e9e9ea; --muted:#9ea0a6; --card:#151518; --accent:#4f8cff; --link:#4f8cff; }
     @media (prefers-color-scheme: light) { :root { --bg:#ffffff; --fg:#111111; --muted:#5a5c63; --card:#f6f7f9; --accent:#2155ff; --link:#2155ff; } }
